5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1573_579.log
== TEST (2019-03-12 20:46:59) 
-- CODE:
print(''A UFAM tem'' , 2016-1909)
-- ERROR:
File "XXXX", line 1
    print(''A UFAM tem'' , 2016-1909)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:47:41) 
-- CODE:
print(''A UFAM tem'' , 2016-1909 ,'' anos de fundacao'')
-- ERROR:
File "XXXX", line 1
    print(''A UFAM tem'' , 2016-1909 ,'' anos de fundacao'')
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:48:16) 
-- CODE:
print('A UFAM tem' , 2016-1909 ,'anos de fundacao')
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:48:27) 
-- CODE:
print('A UFAM tem' , 2016-1909 ,'anos de fundacao')
-- EXECUTION TIME:
0.189278
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:48:53) 
-- CODE:
print('A UFAM tem', 2016-1909,'anos de fundacao.')
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:48:59) 
-- CODE:
print('A UFAM tem', 2016-1909,'anos de fundacao.')
-- EXECUTION TIME:
0.191029
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:54:48) 
-- CODE:
print('A UFAM tem', 2016-1909,'anos de fundacao.')
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:54:49) 
-- CODE:
print('A UFAM tem', 2016-1909,'anos de fundacao.')
-- EXECUTION TIME:
0.117563
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
